# LCC-Lighting-Touchscreen

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build-release.yml
docs/: AGENTS.md  ARCHITECTURE.md  INTERFACES.md  SPEC.md  TEST_PLAN.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/app/: fade_controller.c  fade_controller.h  lcc_config.hxx  lcc_node.cpp  lcc_node.h  scene_storage.c  scene_storage.h
main/ui/: ui_common.c  ui_common.h  ui_main.c  ui_manual.c  ui_scenes.c
